Update bazel
Signed-off-by: thinker0 <thinker0@gmail.com>